# 2018_summer_fira

./: clean.sh  configure.sh
source/.svn/: entries
source/darwin/.svn/: entries
source/darwin/Data/: config.ini
source/darwin/Framework/: CMakeLists.txt
source/darwin/Framework/.svn/: entries
source/darwin/Framework/.svn/text-base/: CMakeLists.txt.svn-base
source/darwin/Framework/include/: .BallTracker.h.swp  BallFollower.h  BallFollower.h~  BallTracker.h  BallTracker.h~  Head.h  Head.h~  JointData.h  frame.h
source/darwin/Framework/include/.svn/: entries
source/darwin/Framework/include/.svn/text-base/: witframe.h.svn-base
source/darwin/Framework/src/: CM730.cpp
source/darwin/Framework/src/.svn/: entries
source/darwin/Framework/src/math/.svn/: entries
source/darwin/Framework/src/minIni/.svn/: entries
source/darwin/Framework/src/motion/: MotionManager.cpp
source/darwin/Framework/src/motion/.svn/: entries
source/darwin/Framework/src/motion/modules/: Action.cpp  Head.cpp  Walking.cpp  Walking.cpp~
source/darwin/Framework/src/motion/modules/.svn/: entries
source/darwin/Framework/src/motion/modules/.svn/text-base/: Walking.cpp.svn-base
source/darwin/Framework/src/vision/: BallFollower.cpp  BallFollower.cpp~  BallTracker.cpp
source/darwin/Framework/src/vision/.svn/: entries
source/data/: CMakeCache.txt  CMakeLists-Communication.txt  CMakeLists-DarwinFramework.txt  CMakeLists-DarwinLinux.txt  CMakeLists-Demo.txt  CMakeLists-Motion.txt  CMakeLists-Strategy.txt  CMakeLists-VisionBlob.txt  CMakeLists-VisionCam.txt  CMakeLists-VisionImgproc.txt  adjust.sh  ball.txt  biantai.cpp  blue.txt  bluebox.txt  cmake-build.sh  config.ini  golf.txt  golfgoal.txt  hongqiu.txt  lanmen.txt  lvqiu.txt  make-build.sh  man.cpp  red.txt  redbox.txt  yellowbox.txt
source/demo/: main.cpp  main.cpp~
(+191 files in other folders)
